
- Added Testcases for i18n.
- Added Testcases Custom renderers.
- Allow to redefine some attribute of the source fields in the fields
  references. So the source fields are the default and can be modified by the
  reference.

0.9.2
=====
- Fixed getting values from select fields if no value is selected and the
  value may be empty. In this case the application send all options to the server.

0.9.1
=====
- Add option to options to define a attribute of the item where to load the available
  options from.

0.9
===
- Set autocomplete="off" for password fields.
- Added serialisation of dates.
- Improved rule parsing, Use brabbel library for rule parsing and evaluation.

0.8.3
=====
- Added translation for warning and error messages.
- Added translation of options in dropdown fields.
- Fixed "readonly" mode for select fields. Select fields need a disabled
  attribute instead of a readonly attribute.

0.8.2
=====
- Added email field.

0.8.1
=====
- Removed dependency to formencode.
- Added experimental special logic to submit unselected items for radio and
  checkbox input fields.
- Render diff to previous value in dropdowns too.
- Add Section elements.

0.8.0
=====
- Added renderer for checkbox fields.
- Added renderer for radio fields.
- Added label tag for the renderer to have more option on rendering the fields
  label.
- Added support to configure simple text element within the form.
- Removed "star" indicator at labels for requierd fields.
- Support (+,-,*,/) and logical grouping of elements
- Conditionals supports now hidding whole pages.
- Table rendering: td and th supports row and colspan.

0.7.2
=====
- Changed Bootstrap version of demoserver to ver. 3.
- Changed example form. Show all possibilities in one form.

0.7.1
=====
- Set value of the field always on rendering (Fixes issue with dropdown fields in view model
- Split loading and filtering of options. Make filtering option available as
  method for external applications.